# hakimifr-scripts

./: README.md  add_license.py  pyproject.toml  ruff.toml
hakimifr_scripts/: __init__.py
