[project]
name = "hakimifr-scripts"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Firdaus Hakimi", email = "hakimifirdaus944@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "kurigram>=2.2.19",
    "psutil>=7.2.2",
    "rich>=14.3.3",
    "tgcrypto>=1.2.5",
]

[project.scripts]
upload = "hakimifr_scripts.bin.upload:entry"
hash = "hakimifr_scripts.bin.hash:main"
mem_usage = "hakimifr_scripts.bin.mem_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

